<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/secView"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/nine"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Nine"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/eight"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Eight"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/five"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Five"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/two"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Two"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <Button
        android:id="@+id/zero"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:text="@string/Zero"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/minus"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Minus"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/six"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Six"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/dot"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Dot"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/clear"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Clear"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/three"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Three"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <Button
        android:id="@+id/one"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:text="@string/One"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <Button
        android:id="@+id/four"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:text="@string/Four"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/slash"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Slash"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/star"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Cross"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <TextView
        android:id="@+id/numberView"
        android:layout_width="235dp"
        android:layout_height="65dp"
        android:textAlignment="viewEnd"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        android:gravity="end"/>

    <Button
        android:id="@+id/equal"
        android:layout_width="88dp"
        android:layout_height="64dp"
        android:text="@string/Equal"
        android:textSize="24sp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/signView"
        android:layout_width="44dp"
        android:layout_height="23dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/plus"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:text="@string/Plus"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/seven"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:text="@string/Seven"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>